--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sanity/ui": "2.11.4",
     "@sanity/vision": "3.71.2",
     "@tailwindcss/typography": "0.5.16",
+    "@vercel/analytics": "^1.4.1",
     "classnames": "2.5.1",
     "date-fns": "4.1.0",
     "next": "15.1.6",
